# HomeWork4

./: CMakeLists.txt  main.cpp  output.txt
lib/: CMakeLists.txt  Makefile  cmake_install.cmake  huffman.cpp  huffman.h  huffman_test  huffman_test.cpp  tree.cpp  tree.h
